<resources>
    <string name="app_name">Cake</string>
    <string name="PaymentHeader">Payment</string>
    <string name="Save_Card">Automatically Save this card</string>
    <string name="CardNumber">Card number</string>
    <string name="CardMonth">MM</string>
    <string name="CardYear">YY</string>
    <string name="CardCode">Security code(CVV)</string>
    <string name="CardHolderName">Cardholder Name</string>
    <string name="CardHeader">Add a credit/debit card</string>
    <string name="paymentSave">Done</string>
    <string name="AddressHeader">Please enter your address in English character as required</string>
    <string name="EditAddressHeader">Please enter your new address in English character as required</string>
    <string name="SaveAddress">Save delivery address automatically save</string>
    <string name="SaveAddressBtn">Continue</string>
    <string name="Name">Customer Name</string>
    <string name="Conatctextention">+94</string>
    <string name="ContactNumber">Contact</string>
    <string name="Street">Street</string>
    <string name="Street2">Street2</string>
    <string name="City">City</string>
    <string name="Address">Delivery Address</string>
    <string name="EditAddress">Edit Delivery Address</string>
    <string name="Order">Order</string>
    <string name="Note">Add a note</string>
    <string name="Your_Order">Your Order</string>
    <string name="AddPayment">Add Payment</string>
    <string name="Mastercard">CASH PAYMENT</string>
    <string name="PaymentMethods">Payment Methods</string>
    <string name="VisaCard">CARD PAYMENT</string>
    <string name="Cash">CASH PAYMENT</string>
    <string name="CloseButton">X</string>
    <string name="label_buy_now">buy</string>
    <string name="Paymentselectpage">Paymentselectpage</string>
    <string name="PaymentSelect">Paymentselect</string>
    <string name="Card_Details">Card Details</string>
    <string name="card_details_confirm">Confirm</string>
    <string name="DeleteMessage">Confirmation</string>
    <string name="deletepaymentcardmessage">Are you sure want to delete this card</string>
    <string name="order_n">order_n</string>
    <string name="Deliver">Delivery Address</string>
    <string name="user_address">user_address</string>
    <string name="items_in_your_order">items_in_your_order</string>
    <string name="product_image">product_image</string>
    <string name="item">item</string>
    <string name="order">Place</string>
    <string name="status_bar">status_bar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_review">Your review:</string>
    <string name="tell_people_about_your_experiance">Tell people about your experiance</string>
    <string name="submit_review">Submit Review</string>
    <string name="your_first_hand_experience_really_help_others_thanks">Your first-hand experience really help others.Thanks!</string>
    <string name="todo">TODO</string>
    <string name="name">Name:</string>
    <string name="reviews">REVIEWS</string>
    <string name="name_sathma">Name: Sathma</string>
    <string name="your_review_i_absolutely_loved_the_cakes_very_delicious">Your Review : I absolutely loved the cakes.Very delicious♥️</string>
    <string name="textview">TextView</string>
    <string name="save_changes">save changes</string>
    <string name="update_your_review">UPDATE YOUR REVIEW</string>
    <string name="textview">TextView</string>
    <string name="your_experiences">Your Experiences</string>
    <string name="name">Name:</string>
    <string name="ushiniiii">ushiniiii</string>
    <string name="wish_to_see_others_experiences">*Wish to see others experiences?</string>
    <string name="view">view</string>
    <string name="get_an_idea_about_what_others_said">*Get an idea about what others said?</string>


</resources>