<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="409dp"
        android:layout_height="54dp"
        android:layout_marginTop="20dp"
        android:hint="test"
        android:text="@string/CardHeader"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <com.braintreepayments.cardform.view.CardForm
        android:id="@+id/card_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">

        <EditText
            android:id="@+id/txtEditname"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:layout_marginLeft="60dp"
            android:hint="@string/CardHolderName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtcvv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtcvv"
            app:layout_constraintTop_toBottomOf="@+id/txtcvv"
            app:layout_constraintVertical_bias="0.017" />

    </com.braintreepayments.cardform.view.CardForm>


    <Switch
        android:id="@+id/switch1"
        android:layout_width="152dp"
        android:layout_height="55dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:text="@string/SaveCard_swtich"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="189dp"
        android:layout_height="33dp"
        android:text="@string/Save_Card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756" />

    <Button
        android:id="@+id/btnaddtresspage"
        android:layout_width="219dp"
        android:layout_height="47dp"
        android:text="@string/paymentSave"
        android:background="@drawable/button_background"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928" />

</androidx.constraintlayout.widget.ConstraintLayout>